# irnn

./: .gitignore  CMakeLists.txt  README.md
benchmark/c_benchmark/: avg_gflops.sh  get_gemm_size.sh  gru_infer.sh  gru_train.sh  lstm_infer.sh  lstm_train.sh  verbose_gru_train.sh  verbose_process.sh
benchmark/c_validation_benchmark/: gru_inference_benchmark.sh  gru_training_benchmark.sh  lstm_infer_benchmark.sh  lstm_infer_validation.sh  lstm_training_benchmark.sh
benchmark/gru_bench/: README  run.sh
benchmark/gru_bench/intel/: mkl_gru.py  mkl_gru_gradients.py  mkl_gru_inference.py  run_wx.sh  test_gru_backward.py  test_numpy_gru.py
benchmark/gru_bench/intel/no_dx_computation/: mkl_gru.py  mkl_gru_gradients.py  mkl_gru_inference.py  run_wx.sh  test_gru_backward.py
benchmark/gru_bench/tensorflow/: tf_rnn_benchmarks_cpu_lstm.py  tf_rnn_benchmarks_gpu_lstm.py
benchmark/pytorch_validation/: util.py
benchmark/pytorch_validation_benchmark/: .gitignore  gru_xw_infer.py  gru_xw_train.py  gru_xw_training.sh  lstm_wx.py  lstm_wx_inference.sh  lstm_xw.py  lstm_xw_inference.sh  lstm_xw_train.py  lstm_xw_training.sh  rnn.py  rnn_inference.sh
benchmark/tensorflow_validation_benchmark/: tf_perf.py  tf_perf_cmp.py
benchmark/tensorflow_validation_benchmark/basiclstm_intelrnn/: intel_1basiclstm_union.py  tf_1basiclstm_union.py  train-3-5.csv
cmake/: MKL.cmake
include/: rnn.h
pytorch_binding/: setup.py
pytorch_binding/irnn_pytorch/: __init__.py
pytorch_binding/src/: binding.cpp  binding.h
src/: gru_wx_infer.cpp  gru_xw_inference.cpp  gru_xw_training.cpp  gru_xw_training_acc.cpp  lstm_wx_infer.cpp  lstm_wx_training.cpp  lstm_xw_infer.cpp  lstm_xw_inference.cpp  lstm_xw_training.cpp  rnn_entrypoint.cpp  rnn_xw_infer.cpp  sru.h  sru_entrypoint.cpp
tests/: benchmark.cpp  test_cpu.cpp  test_gru_xw_inference.cpp  test_gru_xw_training.cpp  test_lstm.cpp  test_lstm_inference.cpp  test_lstm_training.cpp  test_lstm_xw_training.cpp  test_rnn_perf.cpp  test_sru.cpp
